frontend/src/public/components/NotificationsList/NotificationsList.css
/* stylelint-disable selector-pseudo-class-no-unknown, declaration-no-important  */
@keyframes slideIn {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0);
  }
}

@keyframes slideDown {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(100%);
  }
}

.container {
  position: fixed;
  z-index: 1050;
  top: 16px;
  right: 0;
  bottom: 16px;
  overflow: hidden;
  width: 480px;
  max-width: calc(100% - 16px);
  background-color: white;
  border-radius: 32px 0 0 32px;
  box-shadow: 0 8px 24px rgba(98, 98, 95, 0.08);

  :global .ps__rail-y {
    right: 15px !important;
  }

  :global .ps__thumb-y {
    background-color: var(--pneumatic-color-black48) !important;
  }
}

.container_opened {
  animation: slideIn var(--menu-collapse-time) ease-out;
}

.container_closed {
  animation: slideDown var(--menu-collapse-time) ease-out;
}

.container_with-paywall {
  top: 40px;

  @media (--mobile) {
    top: 48px;
  }
}

.header {
  position: relative;
  margin-bottom: -16px;
  padding: 0 32px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 84px;
}

.close-button {
  padding: 0;
  cursor: pointer;
  color: var(--separator-color);
  background-color: transparent;
  border: 0;
  transition: color 0.3s;

  &:hover {
    color: var(--pneumatic-color-link-hover);
  }
}

.empty-list-placeholder {
  position: absolute;
  top: 72px;
  right: 0;
  left: 0;
  bottom: 72px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.notifications-list {
  overflow: auto;
  height: calc(100vh - 100px);

  &::-webkit-scrollbar {
    width: 4px;
  }

  &::-webkit-scrollbar-thumb {
    background: var(--pneumatic-color-black16);
    border-radius: 2px;
  }
}

.notification-item {
  position: relative;
  margin: 16px 4px;
  padding: 0 28px 0 84px;
  display: block;

  @media (--mobile) {
    padding-left: 68px;
  }

  &::before {
    position: absolute;
    z-index: -1;
    top: -12px;
    right: 0;
    left: 0;
    bottom: -12px;
    content: '';
    background-color: #fdf7ee;
    border-radius: 4px;
    opacity: 0;
    transition: opacity 0.1s ease-in-out;
  }

  &:hover .notification-item__remove {
    opacity: 1;
  }

  &:hover::before {
    opacity: 1;
  }
}

.notification-item__remove {
  position: absolute;
  top: 0;
  right: 28px;
  padding: 0;
  color: #dcdcdb;
  background: transparent;
  border: 0;
  opacity: 0;
  transition: color 0.1s ease-in-out;

  &:hover {
    color: var(--pneumatic-color-link-hover);
  }

  @media (hover: none) {
    opacity: 1;
  }
}

.notification-item__avatar {
  position: absolute;
  top: 0;
  left: 28px;
  width: 32px;
}

.notification-item-title {
  margin: 0 -8px 0 0;
  padding-right: 64px;
  display: flex;
  font-size: 15px;
  line-height: 20px;
  color: var(--pneumatic-color-black100);
  flex-wrap: wrap;
  align-items: center;
}

.notification-item-title__text {
  margin-right: 8px;
}

.notification-item-title__icon {
  margin-right: 8px;
  display: flex;
  color: var(--pneumatic-color-black32);
}

.notification-item-title__date {
  font-size: 13px;
  font-weight: bold;
  line-height: 16px;
  color: var(--pneumatic-color-black48);

  @media (--mobile) {
    width: 100%;
  }
}

.notification-item__subtitle {
  margin: 0;
  font-size: 13px;
  line-height: 16px;
  color: var(--pneumatic-color-black48);
}

.notification-item__text {
  margin: 0;
  font-size: 15px;
  line-height: 20px;
  color: var(--pneumatic-color-black72);
}

.avatar__container {
  width: 40px;
  height: 40px;

  @media (--mobile) {
    width: 32px;
    height: 32px;
  }
}

.avatar__image {
  width: 100%;
  height: 100%;
  font-size: 15px;
  border-radius: 50%;

  @media (--mobile) {
    font-size: 11px;
  }
}

.notification-item_new::after {
  position: absolute;
  top: 0;
  left: -4px;
  width: 8px;
  height: 40px;
  content: '';
  background-color: var(--theme-color-1);
  border-radius: 0 4px 4px 0;

  @media (--mobile) {
    height: 32px;
  }
}

.feed__spinner {
  position: absolute !important;
  align-self: center;
  top: 100% !important;
}

